# mcp-tradingview-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.sh  test_server.py
src/: __init__.py  __main__.py  tradingview_server.py
