[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tradingview-server"
version = "0.1.0"
description = "MCP server for TradingView indicators using tradingview_scraper"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = ["mcp>=1.0.0", "tradingview-scraper>=0.4.8", "setuptools>=70.0.0"]

[project.scripts]
mcp-tradingview = "src.tradingview_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv]
dev-dependencies = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]
